@@ -877,8 +877,10 @@ bool ZeroLeptonCR3L::processEvent(xAOD::TEvent& event)
 
   // Sherpa MassiveCB W/Z reweighting : not implemented yet in SUSYOBJDef_xAOD
   float WZweight = 1.;
-
-
+  if( !m_IsData ){
+    WZweight = eventInfo->auxdecor<float>("WZweight");
+  }
+  
   double mT2=-9;
   double mT2_noISR=-9;
   //if (good_jets.size()>=2) mT2 = m_proxyUtils.MT2(good_jets,missingETPrime);
