@@ -545,8 +545,9 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
 
   // Sherpa MassiveCB W/Z reweighting : not implemented yet in SUSYOBJDef_xAOD
   float WZweight = 1.;
-
-
+  if( !m_IsData ){
+    WZweight = eventInfo->auxdecor<float>("WZweight");
+  }
 
   double mT2=-9;
   double mT2_noISR=-9;
